rod/llvmdyn.nim

proc LLVMBuildFree*(para1: TLLVMBuilderRef, PointerVal: TLLVMValueRef): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildLoad*(para1: TLLVMBuilderRef, PointerVal: TLLVMValueRef, 
                    Name: cstring): TLLVMValueRef{.cdecl, dynlib: llvmdll, 
    importc.}
proc LLVMBuildStore*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                     thePtr: TLLVMValueRef): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildGEP*(B: TLLVMBuilderRef, Pointer: TLLVMValueRef, 
                   Indices: PLLVMValueRef, NumIndices: cuint, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
  # Casts  
proc LLVMBuildTrunc*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                     DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildZExt*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                    DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildSExt*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                    DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildFPToUI*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                      DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildFPToSI*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                      DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildUIToFP*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                      DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildSIToFP*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                      DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildFPTrunc*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                       DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildFPExt*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                     DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildPtrToInt*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                        DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildIntToPtr*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                        DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildBitCast*(para1: TLLVMBuilderRef, Val: TLLVMValueRef, 
                       DestTy: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
  # Comparisons  
proc LLVMBuildICmp*(para1: TLLVMBuilderRef, Op: TLLVMIntPredicate, 
                    LHS: TLLVMValueRef, RHS: TLLVMValueRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildFCmp*(para1: TLLVMBuilderRef, Op: TLLVMRealPredicate, 
                    LHS: TLLVMValueRef, RHS: TLLVMValueRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
  # Miscellaneous instructions  
proc LLVMBuildPhi*(para1: TLLVMBuilderRef, Ty: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildCall*(para1: TLLVMBuilderRef, Fn: TLLVMValueRef, 
                    Args: PLLVMValueRef, NumArgs: cuint, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildSelect*(para1: TLLVMBuilderRef, IfCond: TLLVMValueRef, 
                      ThenBranch: TLLVMValueRef, ElseBranch: TLLVMValueRef, 
                      Name: cstring): TLLVMValueRef{.cdecl, dynlib: llvmdll, 
    importc.}
proc LLVMBuildVAArg*(para1: TLLVMBuilderRef, List: TLLVMValueRef, 
                     Ty: TLLVMTypeRef, Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildExtractElement*(para1: TLLVMBuilderRef, VecVal: TLLVMValueRef, 
                              Index: TLLVMValueRef, Name: cstring): TLLVMValueRef{.
    cdecl, dynlib: llvmdll, importc.}
proc LLVMBuildInsertElement*(para1: TLLVMBuilderRef, VecVal: TLLVMValueRef, 
                             EltVal: TLLVMValueRef, Index: TLLVMValueRef, 
                             Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMBuildShuffleVector*(para1: TLLVMBuilderRef, V1: TLLVMValueRef, 
                             V2: TLLVMValueRef, Mask: TLLVMValueRef, 
                             Name: cstring): TLLVMValueRef{.cdecl, 
    dynlib: llvmdll, importc.}
  #===-- Module providers --------------------------------------------------=== 
  # Encapsulates the module M in a module provider, taking ownership of the
  #  module.
  #  See the constructor llvm: : ExistingModuleProvider: : ExistingModuleProvider.
  #
proc LLVMCreateModuleProviderForExistingModule*(M: TLLVMModuleRef): TLLVMModuleProviderRef{.
    cdecl, dynlib: llvmdll, importc.}
  # Destroys the module provider MP as well as the contained module.
  #  See the destructor llvm: : ModuleProvider: : ~ModuleProvider.
  #
proc LLVMDisposeModuleProvider*(MP: TLLVMModuleProviderRef){.cdecl, 
    dynlib: llvmdll, importc.}
  #===-- Memory buffers ----------------------------------------------------=== 
proc LLVMCreateMemoryBufferWithContentsOfFile*(Path: cstring, 
    OutMemBuf: pLLVMMemoryBufferRef, OutMessage: var cstring): int32{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMCreateMemoryBufferWithSTDIN*(OutMemBuf: pLLVMMemoryBufferRef, 
                                      OutMessage: var cstring): int32{.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMDisposeMemoryBuffer*(MemBuf: TLLVMMemoryBufferRef){.cdecl, 
    dynlib: llvmdll, importc.}
proc LLVMWriteBitcodeToFile*(M: TLLVMModuleRef, path: cstring): int{.cdecl, 
    dynlib: llvmdll, importc.}
  # Writes a module to the specified path. Returns 0 on success.
# implementation
